{
    "welcome": "Welcome to Libry",
    "email": "Email",
    "email_hint": "Your email address",
    "email_format_error": "Email is not in correct format!",
    "password": "Password",
    "password_hint": "Your password",
    "password_error": "Password should contain 6 characters!",
    "forgot_password": "Forgot your password?",
    "confirm_password": "Confirm password",
    "confirm_password_hint": "Repeat your password",
    "confirm_password_error": "Passwords do not match!",
    "login": "Login",
    "singup": "Sign up",
    "singup_redirect": "Don't have an account?",
    "singin_redirect": "Already have an account?",
    "email_already_in_use": "Email is already in use!",
    "invalid_credential": "Invalid email or password!",
    "auth_failed": "Authentication failed! Please try again later!",
    "reset_password_title": "Please enter your email below and we will send you a reset link.",
    "reset_password_btn": "Send reset link",
    "reset_password_success": "We've sent you an email with a link to reset your password. Please check your emails.",
    "reset_password_error": "Failed to send reset link. Please try again later!",
    "go_back": "Go back",
    "platforms": "Platforms",
    "platforms_empty": "There are no platforms found",
    "tab_most_popular": "Most popular",
    "tab_newest": "Newest",
    "search": "Search",
    "search_hint": "Enter search keyword in order to find packages you are looking for.",
    "search_empty": "There are no found packages for the entered search criteria!",
    "libraries_error": "Failed to load libraries.",
    "platforms_error": "Failed to load platforms.",
    "internet_error": "No internet connection.",
    "error": "Error occurred. Try again later.",
    "my_account": "My Account",
    "name": "Name",
    "lastname": "Last name",
    "logout": "Log out",
    "change": "change",
    "confirm_logout": "Are you sure you want to log out?",
    "yes": "Yes",
    "no": "No",
    "theme": "Theme",
    "language": "Language",
    "navigation_home": "Home",
    "navigation_favorites": "Favorites",
    "navigation_profile": "Account",
    "language_en": "English",
    "language_sr": "Serbian",
    "library_details": "Library details",
    "license": "License",
    "keywords": "Keywords",
    "repo_status": "Repository status",
    "platform": "Platform",
    "stars": "Stars",
    "latest_release_num": "Latest release number",
    "published_at": "Published at",
    "latest_stable_release": "Latest stable release",
    "homepage": "Homepage",
    "theme_system": "System theme",
    "theme_light": "Light theme",
    "theme_dark": "Dark theme",
    "delete_account": "Delete account",
    "confirm_delete_account": "Are you sure you want to delete your account?",
    "delete_account_error": "Failed to delete user account, please try again later.",
    "reauth_account_error": "Failed to reauthenticate, please try again later.",
    "end_of_list": "You've reached the end",
    "back_history": "No back history item",
    "forward_history": "No forward history item",
    "add_favorites": "Package added to favorites",
    "remove_favorites": "Package removed from favorites",
    "error_favorites": "Error occurred while updating favorites",
    "no_favorites": "There are no favorite packages yet!",
    "explanation_adding": "If you want to add a package to your favorites, press the heart icon.",
    "reauthenticate": "Re-authenticate",
    "enter_password": "Please enter your password to continue",
    "confirm": "Confirm",
    "cancel": "Cancel",
    "wrong_password": "Invalid password, please try again.",
    "too_many_requests": "Too many requests, please try again later.",
    "welcome_onboarding" : "Welcome to Libry!",
    "onborading_title_search" : "Find your perfect code companion!",
    "onborading_title_details" : "Discover package details!",
    "onborading_title_favorites" : "Create your favorites!",
    "onborading_description_welcome " : "Get ready to dive into the world of programming tools! We'll guide you through the vast landscape of programming tools by introducing essential packages.",
    "onborading_description_search" : "Embark on a journey of library exploration with our intuitive search feature. Quickly find the perfect libraries to enhance your projects.",
    "onborading_description_details ": "Explore in-depth information about package to elevate your projects. Dive into detailed descriptions, versions, and more with our package details feature.",
    "onborading_description_favorites " : "Curate your favorite libraries effortlessly. Easily add your preferred libraries, then enjoy access to your curated list whenever you need it."
 

  
}