...
    "my_account": "Moj nalog",
    "name": "Ime",
    "lastname": "Prezime",
    "logout": "Odjavite se",
    "change": "izmeni",
    "confirm_logout": "Da li ste sigurni da želite da se odjavite?",
    "yes": "Da",
    "no": "Ne",
    "theme": "Tema",
    "language": "Jezik",
    "navigation_home": "Početna",
    "navigation_favorites": "Omiljeno",
    "navigation_profile": "Nalog",
...
    "latest_release_num": "Broj poslednjeg izdanja",
    "published_at": "Objavljeno u",
    "latest_stable_release": "Stabilno izdanje",
    "theme_system": "Sistemska tema",
    "theme_light": "Svetla tema",
    "theme_dark": "Tamna tema",
    "delete_account": "Obriši nalog",
    "confirm_delete_account": "Da li ste sigurni da želite da obrišete svoj nalog?",
    "delete_account_error": "Nije uspelo brisanje korisničkog naloga, molimo pokušajte kasnije.",
    "reauth_account_error": "Nije uspela autentifikacija, molimo pokušajte kasnije.",
    "end_of_list": "Došli ste do kraja",
    "back_history": "Nema stavki u istoriji",
    "forward_history": "Nema stavki ispred",
...
