...
                      ),
                ],),
              )
          ),
        );
        },),  
        skipTextButton:  const Text('Skip', style: TextStyle(color: textColor,fontSize: 11),)
        ),
        
     ),
   );
  }

...
